Fix layout on mobile

--- a/imports/client/components/layout/layout.sass
+++ b/imports/client/components/layout/layout.sass
@@ -175,4 +175,5 @@
 
 .rootElement
   z-index: 2
+  overflow: hidden
   position: relative
